updated style and added pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   Research Associate in <b>Paleoceanography</b><br>
   <i class="fa fa-graduation-cap" aria-hidden="true"></i> Department of Marine and Coastal Sciences, <a href="https://marine.rutgers.edu/" target="_blank">Rutgers University </a><br>
   <i class="fa fa-map-marker" aria-hidden="true"></i> <a href = "https://goo.gl/maps/boyd1aDBu2avi2859" target="_blank">Cook/Douglas Campus, Rutgers University, New Brunswick, NJ, USA </a><br>
-  <i class="fa fa-envelope" aria-hidden="true"></i> <a href = "mailto:aidan.m.starr@gmail.com"> aidan.m.starr@gmail.com </a><br>
+  <i class="fa fa-envelope" aria-hidden="true"></i> <a href = "mailto:aidan.m.starr@gmail.com"> aidan.m.starr@gmail.com </a> / or / <a href = "mailto:aidan.starr@marine.rutgers.edu"> aidan.starr@marine.rutgers.edu </a><br>
   <i class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="doc/cv_4page.pdf" target="_blank">CV</a> <br>
 	<i class="fa fa-google" aria-hidden="true"></i> <a href="https://scholar.google.com/citations?user=h0szf_4AAAAJ&hl=en&oi=ao" target="_blank">Scholar</a> <br>
 	<i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/AidanStarr" target="_blank">GitHub</a> <br>
@@ -32,10 +32,16 @@
     <font size = 2.5>
       <br>
 	<b>About me:</b><br>
-	I'm a Paleoceanography Research Associate at Rutgers University, NJ, working under Prof. Liz Sikes on reconstructing Indian Ocean circulation during the last glacial cycle. Previously I worked as a PDRA in Prof. Ian Hall's lab at Cardiff University. I trained as an oceanographer (MSci from Southampton University) before turning my interest towards ocean-climate interactions during the Plio-Pleistocene. In early 2022 I was awarded a PhD for my thesis titled `Surface and Deep Hydrography across the Mid-Pleistocene Transition; Multi-proxy paleoceanographic reconstructions from the Southwest Indian Ocean'.
+	I'm a Paleoceanographer and Paleoclimatologist. Currently a Research Associate at Rutgers University, NJ, working under Prof. Liz Sikes on reconstructing Indian Ocean circulation during the last glacial cycle. Previously I worked as a PDRA in Prof. Ian Hall's lab at Cardiff University. I trained as an Oceanographer (MSci from Southampton University) before turning my interest towards ocean-climate interactions during the Plio-Pleistocene. In early 2022 I was awarded a PhD for my thesis titled `Surface and Deep Hydrography across the Mid-Pleistocene Transition; Multi-proxy paleoceanographic reconstructions from the Southwest Indian Ocean'.
 	<p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/XVtxxum8fqY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+
+<br>
+<br>
+
 
 <p class='header'>
 <font size = 1>
@@ -49,27 +55,34 @@ document.write(document.lastModified);
 <nav id="nav">
 <div class="innertube">
   <font size = 2.5>
-  <h3>Menu</h3>
-  <ul>
-    <li><a href="index.html">Home</a></li>
+		<img src="doc/g2194.png" width=250 id="logo" left=-50px>
+  <ul style="margin-bottom: 10px">
+		<hr style="width:80%;text-align:left;margin-left:0">
+    <li><a href="index.html"><b>Home</b></a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="ships.html">Ship and Field</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="publications.html">Publications</a></li>
-    <li><a href="https://github.com/AidanStarr">Code</a></li>
-		<li><a href="fun.html">Fun</a></li>
-		<br>
-		<li><b>Research:</b>
-			<ul>
-				<i>
-				<li><a href="APcomp.html">The Agulhas Plateau</a></li>
-				<li><a href="Timescales.html">Mid-Pleistocene Transition: Chronologies and Ocean Dynamics</a></li>
-				<br class="small">
-				<li>The LGM Indian Ocean</li>
-				<br class="small">
-				<li>Southern Ocean Icebergs</li>
-			</i>
-			</ul>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="teaching.html">Teaching and Outreach</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="fun.html">Photos</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="research.html">Research</a>
+		<hr style="width:80%;text-align:left;margin-left:0">
+
 		</li>
   </ul>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 </div>
 </nav>
 
