--- a/publications.html
+++ b/publications.html
@@ -15,24 +15,31 @@
   <p class='body'>
   <font size = 5em;><b>Publications and Presentations</b><br>
   <font size = 3em;>
+	<i> You can find a probably more up-to-date list on <a href="https://scholar.google.com/citations?user=h0szf_4AAAAJ&hl=en">Google Scholar</a></i>
 	<ul style="list-style-type:none; line-height:2">
 		<font color = #555>
 	<li><u>Papers:</u></li>
 	<ul style="list-style-type:disc; line-height:1.5">
-		<li><p><b>Antarctic Icebergs Reorganize Ocean Circulation During Pleistocene Glacials</b><br> <cite><u>A. Starr*</u>, I.R. Hall, S. Barker, T. Rackow, S.R. Hemming, H.J.L van der Lubbe, G. Knorr, X. Gong, X. Zhang, M.A. Berke, G. R. Bigg, A. Cartagena-Sierra, F.J. Jiménez-Espejo, J. Gruetzner, N. Lathika`, L.J. LeVay, R. Robinson, M. Ziegler, Exp. 361 Science Party</cite>, Nature (2021)</p>
+
+		<li><p><b>Persistent influence of precession on northern ice sheet variability since the early Pleistocene - <i> Science </i> - Accepted</b><br> <cite>S. Barker*, <u>A. Starr</u>, H.J.L van der Lubbe, <i>et al.</i></cite></p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://eartharxiv.org/repository/view/3281/" target="_blank">preprint</a></small></pre></li>
+
+		<li><p><b>Antarctic Icebergs Reorganize Ocean Circulation During Pleistocene Glacials - <i>Nature</i> - 2021</b><br> <cite><u>A. Starr*</u>, I.R. Hall, S. Barker, T. Rackow, S.R. Hemming, H.J.L van der Lubbe, G. Knorr, X. Gong, X. Zhang, M.A. Berke, G. R. Bigg, A. Cartagena-Sierra, F.J. Jiménez-Espejo, J. Gruetzner, N. Lathika`, L.J. LeVay, R. Robinson, M. Ziegler, Exp. 361 Science Party</cite></p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://github.com/AidanStarr/Starr_et_al_2020" target="_blank">code</a> <a href="https://doi.pangaea.de/10.1594/PANGAEA.921315" target="_blank">data</a> <a href="https://www.nature.com/articles/s41586-020-03094-7" target="_blank">link</a></small></pre></li>
 
-		<li><p><b>Strong glacial-interglacial variability in upper ocean hydrodynamics, biogeochemistry, and productivity in the southern Indian Ocean </b><br> <cite>D.N. Tangunan*, M.A. Berke, A. Cartagena-Sierra, J.A. Flores, J. Gruetzner, F.J. Jiménez-Espejo, L.J. Levay, I.R. Hall, S.R. Hemming, O. Romero, M. Saavedra-Pellitero,<u>A. Starr</u>,  Expedition 361 Science Party</cite>, Communications Earth and Environment (2021)</p>
+		<li><p><b>Invigoration of Indian Ocean Zonal Circulation amplified the Pleistocene Aridification of Eastern Africa - <i>Nature</i> - 2021</b><br> <cite>H.J.L. van der Lubbe*, I.R. Hall, S. Barker, S. R. Hemming, T.F. Baars, <u>A. Starr</u>, J. Just, and J.C.A. Joordens</cite></p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://doi.pangaea.de/10.1594/PANGAEA.933833" target="_blank"><data></a> <a href="https://www.nature.com/articles/s41586-021-03896-3" target="_blank">link</a></small></pre></li>
+
+
+		<li><p><b>Strong glacial-interglacial variability in upper ocean hydrodynamics, biogeochemistry, and productivity in the southern Indian Ocean  - <i>Communications Earth and Environment</i> - 2021</b><br> <cite>D.N. Tangunan*, M.A. Berke, A. Cartagena-Sierra, J.A. Flores, J. Gruetzner, F.J. Jiménez-Espejo, L.J. Levay, I.R. Hall, S.R. Hemming, O. Romero, M. Saavedra-Pellitero,<u>A. Starr</u>,  Expedition 361 Science Party</cite></p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://doi.pangaea.de/10.1594/PANGAEA.912467" target="_blank">data</a> <a href="https://www.nature.com/articles/s43247-021-00148-0?fbclid=IwAR1gKV8B--r6qqdHd7lPykuPY-CPggY3hae5-BU_-javctmTAxgygP4b_D4" target="_blank">link</a></small></pre></li>
 
-		<li><p><b>Neodymium Isotope Evidence for Coupled Southern Ocean Circulation and Antarctic Climate Throughout the Last 118,000 Years</b><br> <cite>T.J. Williams*, E.E. Martin, E. Sikes,<u>A. Starr</u>, N.E. Umling, R. Glaubke</cite>, Quaternary Science Reviews (2021)</p>
+		<li><p><b>Neodymium Isotope Evidence for Coupled Southern Ocean Circulation and Antarctic Climate Throughout the Last 118,000 Years - <i> Quaternary Science Reviews</i> - 2021</b><br> <cite>T.J. Williams*, E.E. Martin, E. Sikes,<u>A. Starr</u>, N.E. Umling, R. Glaubke</cite></p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="temp" target="_blank">data</a> <a href="https://www.sciencedirect.com/science/article/pii/S0277379121001220" target="_blank">link</a></small></pre></li>
 
-		<li><p><b>Latitudinal migrations of the subtropical front across the mid-Pleistocene Transition at the Agulhas Plateau</b><br> <cite>A. Cartagena-Sierra*, M.A. Berke, R.S. Robinson, B. Marcks, I.S. Castañeda, <u>A. Starr</u>, I.R. Hall, S.R. Hemming, L.J. LeVay, Expedition 361 Science Party</cite>, Paleoceanography and Paleoclimatology (2021)</p>
+		<li><p><b>Latitudinal migrations of the subtropical front across the mid-Pleistocene Transition at the Agulhas Plateau - <i> Paleoceanography </i> - 2021</b><br> <cite>A. Cartagena-Sierra*, M.A. Berke, R.S. Robinson, B. Marcks, I.S. Castañeda, <u>A. Starr</u>, I.R. Hall, S.R. Hemming, L.J. LeVay, Expedition 361 Science Party</cite></p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://www.ncei.noaa.gov/metadata/geoportal/rest/metadata/item/noaa-ocean-33472/html" target="_blank">data</a> <a href="https://doi.org/10.1029/2020PA004084" target="_blank">link</a></small></pre></li>
 
-		<li><p><b>Invigoration of Indian Ocean Zonal Circulation amplified the Pleistocene Aridification of Eastern Africa</b><br> <cite>H.J.L. van der Lubbe*, I.R. Hall, S. Barker, S. R. Hemming, T.F. Baars, <u>A. Starr</u>, J. Just, and J.C.A. Joordens</cite>, Nature (2021)</p>
-		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://doi.pangaea.de/10.1594/PANGAEA.933833" target="_blank"><data></a> <a href="https://www.nature.com/articles/s41586-021-03896-3" target="_blank">link</a></small></pre></li>
 
 
 
@@ -63,7 +70,7 @@
 		</ul>
 	<li><u>Other:</u></li>
 		<ul style="list-style-type:disc">
-	<li><p><b>Surface and deep hydrography across the mid-pleistocene transition; multi-proxy paleoceanographic reconstructions from the Southwest Indian Ocean</b><br> <cite><u>Starr, A.,</u></cite> ORCA, Cardiff University (2017),
+	<li><p><b>Surface and deep hydrography across the mid-pleistocene transition; multi-proxy paleoceanographic reconstructions from the Southwest Indian Ocean</b><br> <cite><u>Starr, A.,</u></cite> ORCA, Cardiff University (2021) - examined by David Hodell and Sindia Sosdian,
 	<b><small>PhD THESIS</small></b></p>
 	<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://orca.cardiff.ac.uk/146799/" target="_blank">link (authorisation required... email me for a copy!)</a></small></pre></li>
 
@@ -88,29 +95,26 @@ document.write(document.lastModified);
 <nav id="nav">
 <div class="innertube">
   <font size = 2.5>
-  <h3>Menu</h3>
-  <ul>
+		<img src="doc/g2194.png" width=250 id="logo" left=-50px>
+  <ul style="margin-bottom: 10px">
+		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="index.html">Home</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
-    <li><a href="publications.html">Publications</a></li>
-    <li><a href="https://github.com/AidanStarr">Code</a></li>
-		<li><a href="fun.html">Fun</a></li>
-		<br>
-		<li><b>Research:</b>
-			<ul>
-				<i>
-				<li><a href="APcomp.html">The Agulhas Plateau</a></li>
-				<li><a href="Timescales.html">Mid-Pleistocene Transition: Chronologies and Ocean Dynamics</a></li>
-				<br class="small">
-				<li>The LGM Indian Ocean</li>
-				<br class="small">
-				<li>Southern Ocean Icebergs</li>
-			</i>
-			</ul>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="ships.html">Ship and Field</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+    <li><a href="publications.html"><b>Publications</b></a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="teaching.html">Teaching and Outreach</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="fun.html">Photos</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="research.html">Research</a>
+		<hr style="width:80%;text-align:left;margin-left:0">
+
 		</li>
   </ul>
-</div>
-</nav>
 
 </body>
 </html>
