--- a/skills.html
+++ b/skills.html
@@ -13,40 +13,49 @@
 <main style=top:0%;>
 <div class="innertube">
   <p class='body'>
-  <font size = 5em;><b>Skills</b><br>
+  <font size = 5em;><b>What can I do?</b><br>
   <font size = 3em;>
 	<ul style="list-style-type:none; line-height:2.5">
 		<font color = #555>
-	<li><u>Laboratory:</u></li>
+	<li><b>My primary lab-based activities include:</b></li>
 	<ul style="list-style-type:disc; line-height:1.5">
-		<li> Sediment grain size analysis (Coulter Counter, Malvern MultiSizer X) [I.R. Hall's lab]</li>
-		<li> Identification and picking of Neogene Foraminifera (planktic and benthic)[P. Wilson's Lab]</li>
-		<li> Stable isotope analysis of calcite (Thermo MAT 253 [Kiel IV]) [I.R. Hall's lab]</li>
-		<li> Some experience measuring He isotopes in marine sediment samples [G. Winckler's lab]</li>
-		<li> Identification and counting of ice-rafted Debris, pyrite, and other sand-sized entities in marine sediment (light microscope and SEM) [I.R. Hall's lab]</li>
+		<li> Washing and seiving of marine sediments for paleoclimate analysis</li>
+		<li> Sediment grain size analysis (Coulter Counter, Malvern MultiSizer X) - <i>Currently in the process of setting up a "Sortable Silt" protocol at Rutgers Unviersity</i> </li>
+		<li> Identification and picking of Neogene Foraminifera (planktic and benthic)</li>
+		<li> Stable isotope analysis of calcite (Thermo MAT 253 [Kiel IV])</li>
+		<li> Identification and counting of ice-rafted Debris, pyrite, and other sand-sized entities in marine sediment (light microscope and SEM)</li>
 	</ul>
+
+I also have some experience with measuring bulk chemistry (XRF and ICP-OES) and less common isotope systems (e.g. He) in marine sediments.
 	<li><img src="doc/skills1.jpeg" height="140"> <img src="doc/skills3.jpeg" height="140"> <img src="doc/skills2.jpeg" height="140">
-  <li><u>Ship:</u></li>
-	<ul style="list-style-type:disc; line-height:1.5">
-		<li> 'Physical Properties' (Multi-Sensor-Core-Logging of sediment cores)</li>
-		<li> Sediment core description and curation</li>
-		<li> Shipboard stratigraphy (utilising downcore L*, density, RGB data)</li>
-		<li> Prepping and deploying Gravity Cores, Piston Cores, Multi-Cores, CTDs</li>
-		<li> <i> Shipboard scientist on the CROCCA-2s expedition (Oct-Dec 2018) and the ACCLIMATE-2 expedition (Feb-Mar 2020)</i></li>
-	</ul>
-	<li><img src="doc/skills4.JPG" height="160"> <img src="doc/skills5.jpg" height="160"> <img src="doc/skills6.jpg" height="160">
-	<li><u>Office:</u></li>
+
+<br>
+<br>
+	<li><b>In the office you can find me working with:</b></li>
 	<ul style="list-style-type:disc; line-height:1.5">
 		<li> Chronostratigraphy: Constructing age-depth models for sediment cores by a variety of approaches, classical and novel</li>
-		<li> <span class="latex">MATLAB</span>: >7 Years experience using Matlab for data analysis, statistics, visualisation</li>
-		<li> Python: Data analysis and visualisation with python (Jupyter, NumPy, Pandas, Xarray, Seaborn, Matplotlib, etc...)</li>
-		<li> Time Series Analysis: Analysing regularly- and irregularly-spaced data in the frequency domain (Blackman-Tukey, Lomb-Scargle, SSA, Wavelet Analysis, Multi-Taper Method, ARIMA modelling, etc.)</li>
-		<li> Novel numerical approaches to explore paleoclimate datasets </li>
-		<li> Complex Data Visualisation</li>
+		<li> <span class="latex">MATLAB</span>: 8+ Years experience using Matlab for data analysis, statistics, visualisation</li>
+		<li> Python: The majority of my data analysis happens in Python (Jupyter, NumPy, Pandas, Xarray, Seaborn, Matplotlib, etc...)</li>
+		<li> R: I also do much of my time series analysis in R, with the help of packages such as Astrochron and GeochronR.</li>
 		<li> Ocean Data View for visualising oceanographic data </li>
 		<li> <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>: Typsetting documents in the tex language</li>
 	</ul>
-	<li> <img src="doc/powerby.png" height="240"> <img src="doc/skills7.gif" height="240"> <img src="doc/skills9.gif" height="240">
+
+	In general, I try to take a <i>data science</i> inspired approach to work. You can find much of my code and data on Github.
+<br>
+	<li> <img src="doc/powerby.png" height="240"> <img src="doc/skills7.gif" height="240">
+<br>
+
+	<li><b>I like to make numbers into other numbers with:</b></li>
+	<ul style="list-style-type:disc; line-height:1.5">
+	  <li> Time Series Analysis: Analysing regularly- and irregularly-spaced data in the frequency domain (Blackman-Tukey, Lomb-Scargle, SSA, Wavelet Analysis, Multi-Taper Method, ARIMA modelling, etc.)</li>
+		<li> Novel numerical approaches to explore paleoclimate datasets </li>
+		<li> Age-uncertain statistics (using age ensemble age models, for example) </li>
+	</ul>
+</ul>
+
+
+	</ul>
 	</ul>
 
 	</ul>
@@ -67,29 +76,32 @@ document.write(document.lastModified);
 <nav id="nav">
 <div class="innertube">
   <font size = 2.5>
-  <h3>Menu</h3>
-  <ul>
+		<img src="doc/g2194.png" width=250 id="logo" left=-50px>
+  <ul style="margin-bottom: 10px">
+		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="index.html">Home</a></li>
-    <li><a href="skills.html">Skills</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+    <li><a href="skills.html"><b>Skills</b></a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="ships.html">Ship and Field</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="publications.html">Publications</a></li>
-    <li><a href="https://github.com/AidanStarr">Code</a></li>
-		<li><a href="fun.html">Fun</a></li>
-		<br>
-		<li><b>Research:</b>
-			<ul>
-				<i>
-				<li><a href="APcomp.html">The Agulhas Plateau</a></li>
-				<li><a href="Timescales.html">Mid-Pleistocene Transition: Chronologies and Ocean Dynamics</a></li>
-				<br class="small">
-				<li>The LGM Indian Ocean</li>
-				<br class="small">
-				<li>Southern Ocean Icebergs</li>
-			</i>
-			</ul>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="teaching.html">Teaching and Outreach</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="fun.html">Photos</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="research.html">Research</a>
+		<hr style="width:80%;text-align:left;margin-left:0">
+
 		</li>
   </ul>
+
+<br>
+<br>
 </div>
 </nav>
+
 
 </body>
 </html>
