--- a/fun.html
+++ b/fun.html
@@ -13,7 +13,6 @@
 <main style=top:0%;>
 <div class="innertube">
   <p class='body'>
-  <font size = 5em;><b>When I'm not working...</b><br>
   <font size = 3em;>
 	<ul style="list-style-type:none; line-height:2">
 		<font color = #555>
@@ -41,27 +40,34 @@ document.write(document.lastModified);
 <nav id="nav">
 <div class="innertube">
   <font size = 2.5>
-  <h3>Menu</h3>
-  <ul>
+		<img src="doc/g2194.png" width=250 id="logo" left=-50px>
+  <ul style="margin-bottom: 10px">
+		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="index.html">Home</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="ships.html">Ship and Field</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="publications.html">Publications</a></li>
-    <li><a href="https://github.com/AidanStarr">Code</a></li>
-		<li><a href="fun.html">Fun</a></li>
-		<br>
-		<li><b>Research:</b>
-			<ul>
-				<i>
-				<li><a href="APcomp.html">The Agulhas Plateau</a></li>
-				<li><a href="Timescales.html">Mid-Pleistocene Transition: Chronologies and Ocean Dynamics</a></li>
-				<br class="small">
-				<li>The LGM Indian Ocean</li>
-				<br class="small">
-				<li>Southern Ocean Icebergs</li>
-			</i>
-			</ul>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="teaching.html">Teaching and Outreach</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="fun.html"><b>Photos</b></a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="research.html">Research</a>
+		<hr style="width:80%;text-align:left;margin-left:0">
+
 		</li>
   </ul>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 </div>
 </nav>
 
