--- a/publications.html
+++ b/publications.html
@@ -21,8 +21,8 @@
 	<li><u>Papers:</u></li>
 	<ul style="list-style-type:disc; line-height:1.5">
 
-		<li><p><b>Persistent influence of precession on northern ice sheet variability since the early Pleistocene - <i> Science </i> - Accepted</b><br> <cite>S. Barker*, <u>A. Starr</u>, H.J.L van der Lubbe, <i>et al.</i></cite></p>
-		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://eartharxiv.org/repository/view/3281/" target="_blank">preprint</a></small></pre></li>
+		<li><p><b>Persistent influence of precession on northern ice sheet variability since the early Pleistocene - <i> Science </i> - 2022</b><br> <cite>S. Barker*, <u>A. Starr</u>, H.J.L van der Lubbe, <i>et al.</i></cite></p>
+		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://www.science.org/doi/suppl/10.1126/science.abm4033/suppl_file/science.abm4033_matlab_files.zip">code</a> <a href="https://www.science.org/doi/suppl/10.1126/science.abm4033/suppl_file/science.abm4033_data_s1.zip">data</a> <a href="https://www.science.org/doi/10.1126/science.abm4033" target="_blank">link</a></small></pre></li>
 
 		<li><p><b>Antarctic Icebergs Reorganize Ocean Circulation During Pleistocene Glacials - <i>Nature</i> - 2021</b><br> <cite><u>A. Starr*</u>, I.R. Hall, S. Barker, T. Rackow, S.R. Hemming, H.J.L van der Lubbe, G. Knorr, X. Gong, X. Zhang, M.A. Berke, G. R. Bigg, A. Cartagena-Sierra, F.J. Jiménez-Espejo, J. Gruetzner, N. Lathika`, L.J. LeVay, R. Robinson, M. Ziegler, Exp. 361 Science Party</cite></p>
 		<pre style="margin-left:3em;margin-top:-1em;"><small><a href="https://github.com/AidanStarr/Starr_et_al_2020" target="_blank">code</a> <a href="https://doi.pangaea.de/10.1594/PANGAEA.921315" target="_blank">data</a> <a href="https://www.nature.com/articles/s41586-020-03094-7" target="_blank">link</a></small></pre></li>
@@ -46,6 +46,10 @@
 			</ul>
   <li><u>Selected Conference Presentations:</u></li>
 	<ul style="list-style-type:disc">
+
+		<li><p><b>The Antarctic Circumpolar Current in the glacial Indian Ocean: A multi-site paleoceanographic reconstruction</b><br> <cite><u>Starr, A.,</u> et al.</cite>, AGU Fall Meeting (2022),
+		<b><small>POSTER</small></b></p>
+			<pre style="margin-left:3em;margin-top:-1em;"><small><a href="10.5194/egusphere-egu2020-10495" target="_blank">link</a></small></pre></li>
 
 			<li><p><b>The Evolution of Subantarctic Fronts, Deep Ocean Ventilation and Flow Vigour at the Agulhas Plateau: Surface-Deep Coupling Across Climate Transitions of the past 3 Ma</b><br> <cite><u>Starr, A.,</u> et al.</cite>, EGU General Assembly (2020),
 			<b><small>TALK</small></b></p>
@@ -108,10 +112,7 @@ document.write(document.lastModified);
 		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="teaching.html">Teaching and Outreach</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="fun.html">Photos</a></li>
-		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="research.html">Research</a>
-		<hr style="width:80%;text-align:left;margin-left:0">
+
 
 		</li>
   </ul>
