--- a/ships.html
+++ b/ships.html
@@ -50,10 +50,16 @@ More info on the cruise can be found <a href="https://campagnes.flotteoceanograp
 	<hr>
 	<p class='body'>
 	<font size = 4>
-	<b>PUFFINS</b><br>
+	<img src="doc/PUFINS.jpeg" height=80 align=middle style="float:left; padding: 0px 5px 0px 0px;"><b>PUFINS</b><br>
 	<font size = 2.5>
-	<b> SETTING SAIL JUNE 2022!!!</b>
+	<i>Paleo Unsaturated-alkenone Fluxes In Northwest-Sediments</i><br>
+	<b> 2022 -- R/V Atlantis</b></br>
 	<br>
+</br>
+	I was a shore-based scientist and stragraphic correlator for the <i> Paleo Unsaturated-alkenone Fluxes In Northwest-Sediments</i> expedition which recovered sediment cores from the NW Atlantic Ocean. The primary objective of this project is to constrain Holocene (0-14 kyr-ago) temperature variations in the region.
+	<br>
+	<br>
+	More info on the cruise can be found <a href="https://sites.rutgers.edu/pufins-at-sea/">here</a><br>
 </br>
 <hr>
 </br>
@@ -108,10 +114,6 @@ Same as above... but a little further south.
     <li><a href="publications.html">Publications</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="teaching.html">Teaching and Outreach</a></li>
-		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="fun.html">Photos</a></li>
-		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="research.html">Research</a>
 		<hr style="width:80%;text-align:left;margin-left:0">
 
 		</li>
