--- a/skills.html
+++ b/skills.html
@@ -17,21 +17,7 @@
   <font size = 3em;>
 	<ul style="list-style-type:none; line-height:2.5">
 		<font color = #555>
-	<li><b>My primary lab-based activities include:</b></li>
-	<ul style="list-style-type:disc; line-height:1.5">
-		<li> Washing and seiving of marine sediments for paleoclimate analysis</li>
-		<li> Sediment grain size analysis (Coulter Counter, Malvern MultiSizer X) - <i>Currently in the process of setting up a "Sortable Silt" protocol at Rutgers Unviersity</i> </li>
-		<li> Identification and picking of Neogene Foraminifera (planktic and benthic)</li>
-		<li> Stable isotope analysis of calcite (Thermo MAT 253 [Kiel IV])</li>
-		<li> Identification and counting of ice-rafted Debris, pyrite, and other sand-sized entities in marine sediment (light microscope and SEM)</li>
-	</ul>
-
-I also have some experience with measuring bulk chemistry (XRF and ICP-OES) and less common isotope systems (e.g. He) in marine sediments.
-	<li><img src="doc/skills1.jpeg" height="140"> <img src="doc/skills3.jpeg" height="140"> <img src="doc/skills2.jpeg" height="140">
-
-<br>
-<br>
-	<li><b>In the office you can find me working with:</b></li>
+				<li><b>In the office you can find me working with:</b></li>
 	<ul style="list-style-type:disc; line-height:1.5">
 		<li> Chronostratigraphy: Constructing age-depth models for sediment cores by a variety of approaches, classical and novel</li>
 		<li> <span class="latex">MATLAB</span>: 8+ Years experience using Matlab for data analysis, statistics, visualisation</li>
@@ -52,6 +38,20 @@ I also have some experience with measuring bulk chemistry (XRF and ICP-OES) and 
 		<li> Novel numerical approaches to explore paleoclimate datasets </li>
 		<li> Age-uncertain statistics (using age ensemble age models, for example) </li>
 	</ul>
+
+	<li><b>My primary lab-based activities include:</b></li>
+	<ul style="list-style-type:disc; line-height:1.5">
+		<li> Washing and seiving of marine sediments for paleoclimate analysis</li>
+		<li> Sediment grain size analysis (Coulter Counter, Malvern MultiSizer X) - <i>Currently in the process of setting up a "Sortable Silt" protocol at Rutgers Unviersity</i> </li>
+		<li> Identification and picking of Neogene Foraminifera (planktic and benthic)</li>
+		<li> Stable isotope analysis of calcite (Thermo MAT 253 [Kiel IV])</li>
+		<li> Identification and counting of ice-rafted Debris, pyrite, volcanic ash, and other sand-sized entities in marine sediment (light microscope and SEM)</li>
+	</ul>
+
+I also have some experience with measuring bulk chemistry (XRF and ICP-OES) and less common isotope systems (e.g. He) in marine sediments.
+	<li><img src="doc/skills1.jpeg" height="140"> <img src="doc/skills3.jpeg" height="140"> <img src="doc/skills2.jpeg" height="140">
+
+<br>
 </ul>
 
 
@@ -88,10 +88,6 @@ document.write(document.lastModified);
     <li><a href="publications.html">Publications</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="teaching.html">Teaching and Outreach</a></li>
-		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="fun.html">Photos</a></li>
-		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="research.html">Research</a>
 		<hr style="width:80%;text-align:left;margin-left:0">
 
 		</li>
