added portfolio page (forgot to update navbar)

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,8 @@ document.write(document.lastModified);
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
+		<li><a href="portfolio.html">Data science (mini) portfolio</a></li>
+		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="ships.html">Ship and Field</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="publications.html">Publications</a></li>
