fixed navbar bug

--- a/publications.html
+++ b/publications.html
@@ -102,15 +102,15 @@ document.write(document.lastModified);
 		<img src="doc/g2194.png" width=250 id="logo" left=-50px>
   <ul style="margin-bottom: 10px">
 		<hr style="width:80%;text-align:left;margin-left:0">
-    <li><a href="index.html"><b>Home</b></a></li>
+    <li><a href="index.html">Home<</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="portfolio.html">Data science (mini) portfolio</a></li>
+		<li><a href="portfolio.html"><b>Data-science (mini) portfolio</b></a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="ships.html">Ship and Field</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
-    <li><a href="publications.html">Publications</a></li>
+    <li><a href="publications.html"><b>Publications</b></a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="teaching.html">Teaching and Outreach</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
