--- a/skills.html
+++ b/skills.html
@@ -79,9 +79,9 @@ document.write(document.lastModified);
 		<img src="doc/g2194.png" width=250 id="logo" left=-50px>
   <ul style="margin-bottom: 10px">
 		<hr style="width:80%;text-align:left;margin-left:0">
-    <li><a href="index.html"><b>Home</b></a></li>
+    <li><a href="index.html">Home</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
-    <li><a href="skills.html">Skills</a></li>
+    <li><a href="skills.html"><b>Skills</b></a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="portfolio.html">Data science (mini) portfolio</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
