--- a/ships.html
+++ b/ships.html
@@ -105,13 +105,13 @@ Same as above... but a little further south.
 		<img src="doc/g2194.png" width=250 id="logo" left=-50px>
   <ul style="margin-bottom: 10px">
 		<hr style="width:80%;text-align:left;margin-left:0">
-    <li><a href="index.html"><b>Home</b></a></li>
+    <li><a href="index.html">Home</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="portfolio.html">Data science (mini) portfolio</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="ships.html">Ship and Field</a></li>
+		<li><a href="ships.html"><b>Ship and Field</b></a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="publications.html">Publications</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
