--- a/teaching.html
+++ b/teaching.html
@@ -112,7 +112,7 @@
 		<img src="doc/g2194.png" width=250 id="logo" left=-50px>
   <ul style="margin-bottom: 10px">
 		<hr style="width:80%;text-align:left;margin-left:0">
-    <li><a href="index.html"><b>Home</b></a></li>
+    <li><a href="index.html">Home</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
@@ -122,7 +122,7 @@
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="publications.html">Publications</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="teaching.html">Teaching and Outreach</a></li>
+		<li><a href="teaching.html"><b>Teaching and Outreach</b></a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
 
 		</li>
