--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@ document.write(document.lastModified);
 		<img src="doc/g2194.png" width=250 id="logo" left=-50px>
   <ul style="margin-bottom: 10px">
 		<hr style="width:80%;text-align:left;margin-left:0">
-    <li><a href="index.html">Home<</a></li>
+    <li><a href="index.html">Home</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
