added new notebook

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,13 @@ Below are a selection of Jupyter Notebooks (in html format) showcasing some clim
 	<br>
 	<hr>
 
-	<li><a href="port/UK_rainfall_timeseries.html" target="_blank" style="font-size:17px;font-family:verdana;color:#555; text-decoration: none"><b>Time series modelling of UK rainfall data? **click to open**</b></p><img src="doc/linear_trend.png" width=300 left=-50px><br><span><i><a style="font-size:11px;font-family:verdana;color:#555">tags: ARIMA; geopandas; time series modelling; Machine Learning;</a></i></span></a></li>
+	<li><a href="port/UK_rainfall_timeseries.html" target="_blank" style="font-size:17px;font-family:verdana;color:#555; text-decoration: none"><b>Time series modelling of UK rainfall data **click to open**</b></p><img src="doc/linear_trend.png" width=300 left=-50px><br><span><i><a style="font-size:11px;font-family:verdana;color:#555">tags: ARIMA; geopandas; time series modelling; Machine Learning;</a></i></span></a></li>
 
+	<br>
+	<br>
+	<hr>
+
+	<li><a href="port/gridding_geospatial_carbon_data.html" target="_blank" style="font-size:17px;font-family:verdana;color:#555; text-decoration: none"><b>Geospatial analyis: Using Kriging to grid sparse carbon isotope data in Python **click to open**</b></p><img src="doc/krigged_13c.png" width=325 left=-50px><br><span><i><a style="font-size:11px;font-family:verdana;color:#555">tags: Kriging; Geospatial Analysis; geopandas; PyKrige</a></i></span></a></li>
 
 </ol>
 
