--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <font size = 2.5>
       <br>
 	<b>About me:</b><br>
-	I'm a Paleoceanographer and Paleoclimatologist. Currently a Research Associate at Rutgers University, NJ, working under Prof. Liz Sikes on reconstructing Indian Ocean circulation during the last glacial cycle. Previously I worked as a PDRA in Prof. Ian Hall's lab at Cardiff University. I trained as an Oceanographer (MSci from Southampton University) before turning my interest towards ocean-climate interactions during the Plio-Pleistocene. In early 2022 I was awarded a PhD for my thesis titled `Surface and Deep Hydrography across the Mid-Pleistocene Transition; Multi-proxy paleoceanographic reconstructions from the Southwest Indian Ocean'.
+	I'm a Climate Scientist specialising in carbon cycle dynamics and paleoclimatology. Currently a Research Associate at Rutgers University, NJ, working under Prof. Liz Sikes on reconstructing Indian Ocean circulation and carbon cycle processes during the last glacial cycle. Previously I worked as a PDRA in Prof. Ian Hall's lab at Cardiff University. I trained as an Oceanographer (MSci from Southampton University) before turning my interest towards ocean-climate interactions during the Plio-Pleistocene. In early 2022 I was awarded a PhD for my thesis titled `Surface and Deep Hydrography across the Mid-Pleistocene Transition; Multi-proxy paleoceanographic reconstructions from the Southwest Indian Ocean'.
 	<p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/XVtxxum8fqY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
