added to data page

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,13 @@ Below are a selection of Jupyter Notebooks (in html format) showcasing some clim
 	<br>
 	<hr>
 
-	<li><a href="port/gridding_geospatial_carbon_data.html" target="_blank" style="font-size:17px;font-family:verdana;color:#555; text-decoration: none"><b>Geospatial analyis: Using Kriging to grid sparse carbon isotope data in Python **click to open**</b></p><img src="doc/krigged_13c.png" width=325 left=-50px><br><span><i><a style="font-size:11px;font-family:verdana;color:#555">tags: Kriging; Geospatial Analysis; geopandas; PyKrige</a></i></span></a></li>
+	<li><a href="port/gridding_geospatial_carbon_data.html" target="_blank" style="font-size:17px;font-family:verdana;color:#555; text-decoration: none"><b>Geospatial analysis: Using Kriging to grid sparse carbon isotope data in Python **click to open**</b></p><img src="doc/krigged_13c.png" width=325 left=-50px><br><span><i><a style="font-size:11px;font-family:verdana;color:#555">tags: Kriging; Geospatial Analysis; geopandas; PyKrige</a></i></span></a></li>
+
+	<br>
+	<br>
+	<hr>
+
+	<li><a href="port/river_pollution_EDA.html" target="_blank" style="font-size:17px;font-family:verdana;color:#555; text-decoration: none"><b>River pollution (in progress): Exploratory Data Analysis using freely available River quality monitoring data to look for trends in UK river quality. **click to open**</b></p><img src="doc/suspended_solids.png" width=450 left=-50px><br><span><i><a style="font-size:11px;font-family:verdana;color:#555">tags: Environmental Science; Geospatial Analysis; geopandas; seaborn</a></i></span></a></li>
 
 </ol>
 
